syntax = "proto3";

package hello;

// 定义请求参数
message HelloRequest {
  string name = 1;
}

// 定义响应参数
message HelloReply {
  string message = 1;
}

// 定义服务
service Greeter {
  // 简单 RPC 方法
  rpc SayHello (HelloRequest) returns (HelloReply);
}